src/pages/Exercises/components/ExerciseItem.module.css
.exercise-item-wrapper {
  display: flex;
  align-items: center;
  background-color: rgb(52, 52, 52);
  border: 1px solid rgba(255, 255, 255, 0.06);
  padding: clamp(0.7rem, 2vw, 1rem) clamp(1.5rem, 2vw, 2rem);
  cursor: pointer;
  color: white;
  border-radius: 1rem;
  transition: 0.3s ease;
}

.exercise-item-wrapper:hover {
  background-color: rgb(62, 62, 62);
}

.exercise-item-wrapper:active {
  background-color: rgb(72, 72, 72);
}


.exercise-item-img {
  margin-right: 2rem;
  max-width: clamp(8rem, 20vw, 11rem);
  border-radius: 1rem;
}

.exercise-item-name {
  margin-left: auto;
  margin-right: auto;
  font-size: clamp(1.4rem, 1vw, 1.8rem);
  font-weight: 600;
}

.no-exercises-found-text {
  text-align: center;
  font-weight: 600;
  font-size: clamp(1.5rem, 2vw, 1.8rem);
  color: rgb(200, 200, 200);
}

